fix(product toggle): Added a z-index to the product toggle to make it appear

--- a/css/templates/lune/components/_product-toggle.css
+++ b/css/templates/lune/components/_product-toggle.css
@@ -6,6 +6,8 @@
   bottom: 20px;
   right: 20px;
 
+  z-index: var(--z2);
+
   width: 50px;
   height: 50px;
 
